--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
   <footer id="contact">
     <h3>Επικοινωνία - Αποστολή Event</h3>
-    <form action="https://formspree.io/f/xwkgglnn" method="POST">
+    <form action="https://formspree.io/f/manepykr" method="POST">
       <label for="email">Email:</label>
       <input type="email" name="email" placeholder="Το email σας" required />
 
